--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Pegs and Jokers - for the grandparents and their friends during the quarantine",
   "main": "server.js",
-  "dependencies": {
+  "dependenciesToUpdateVersions": {
     "@babel/register": "^7.9.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
@@ -12,7 +12,7 @@
     "lodash": "^4.17.21",
     "webpack-dev-middleware": "^3.7.2"
   },
-  "devDependencies": {
+  "devDependenciesToUpdateVersions": {
     "@babel/cli": "^7.13.16",
     "@babel/core": "^7.9.0",
     "@babel/node": "^7.8.7",
